horizontal scroll fixed

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;800&display=swap');
-
+body {
+  overflow-x: hidden;
+}
 * {
   font-family: 'Work Sans', sans-serif;
   box-sizing: border-box;
